--- a/light-charts/index.html
+++ b/light-charts/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>柱状图</title>
+    <title></title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
 </head>
@@ -14,7 +14,7 @@
     <div class="hello">
         <div class="chart-title">
             <div>
-                <h3><span id="charTitle" class="charTitle chart-title"></span><span class="chart-title">税收占国民生产总值GDP</span></h3>
+                <h3><span id="charTitle" class="charTitle chart-title"></span><span class="chart-title">商品出口（现价美元）</span></h3>
             </div>
         </div>
         <div class="box-data-chart">
@@ -23,17 +23,76 @@
         <div class="country-select">
             <ul class="select-opion" id="list">
                 <li id="china" class="select-option">中国</li>
-                <li id="els" class="select-option">日本</li>
+                <li id="els" class="select-option">俄罗斯</li>
                 <li id="eng" class="select-option">英国</li>
                 <li id="french" class="select-option">法国</li>
                 <li id="american" class="select-option">美国</li>
             </ul>
+        </div>
+        <div class="table">
+            <div style="display:flex;flex-direction:row;justify-content:center">
+                <div class="data-part1" style>
+                    <p>
+                        <span class="table-year">2007年</span>
+                        <span class="table-value"></span>
+                    </p>
+                    <p>
+                        <span class="table-year">2008年</span>
+                        <span class="table-value"></span>
+                    </p>
+                    <p>
+                        <span class="table-year">2009年</span>
+                        <span class="table-value"></span>
+                    </p>
+                    <p>
+                        <span class="table-year">2010年</span>
+                        <span class="table-value"></span>
+                    </p>
+                </div>
+                <div class="data-part1">
+                    <p>
+                        <span class="table-year">2011年</span>
+                        <span class="table-value"></span>
+                    </p>
+                    <p>
+                        <span class="table-year">2012年</span>
+                        <span class="table-value"></span>
+                    </p>
+                    <p>
+                        <span class="table-year">2013年</span>
+                        <span class="table-value"></span>
+                    </p>
+                    <p>
+                        <span class="table-year">2014年</span>
+                        <span class="table-value"></span>
+                    </p>
+                </div>
+                <div class="data-part1">
+                    <p>
+                        <span class="table-year">2015年</span>
+                        <span class="table-value"></span>
+                    </p>
+                    <p>
+                        <span class="table-year">2016年</span>
+                        <span class="table-value"></span>
+                    </p>
+                    <p>
+                        <span class="table-year">2017年</span>
+                        <span class="table-value"></span>
+                    </p>
+                    <p>
+                        <span class="table-year">2018年</span>
+                        <span class="table-value"></span>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     <!-- <script src='js/echarts.min.js'></script> -->
     <!-- <script src='js/jquery-3.2.1.min.js'></script> -->
     <script src="https://cdn.bootcss.com/echarts/4.3.0-rc.2/echarts-en.common.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://cdn.bootcss.com/bootstrap-table/1.15.4/bootstrap-table-locale-all.min.js"></script> -->
     <script>
         var arrCounrtyData = []
         var country = ''
@@ -55,7 +114,6 @@
                     key = $(".select-option")[j].innerText;
                     $(".charTitle")[0].innerText = key;
                     switchData(key)
-
                 }
             }
             country = key
@@ -65,68 +123,43 @@
         function switchData(key) {
             switch (key) {
                 case "中国":
-                    arrCounrtyData = [9.771406923, 10.10142693, 10.30944303, 10.21204751, 10.31279448, 9.907733077, 9.713067852, 9.416086828, 9.20099957]
-
+                    arrCounrtyData = [1220000000000.00, 1430000000000.00, 1200000000000.00, 1580000000000.00, 1900000000000.00, 2050000000000.00, 2210000000000.00, 2340000000000.00, 2270000000000.00, 2100000000000.00, 2260000000000.00, 2490000000000.00]
                     getChart()
                     break;
-                case "日本":
-                    arrCounrtyData = [10.10618629, 8.931591654, 8.36891038, 8.809784435, 9.356818207, 9.682412944, 10.36061765, 11.46920658, 11.42357202, 11.15496587, 11.64194651]
-
+                case "俄罗斯":
+                    arrCounrtyData = [354000000000.00, 472000000000.00, 303000000000.00, 401000000000.00, 522000000000.00, 529000000000.00, 522000000000.00, 497000000000.00, 341000000000.00, 282000000000.00, 354000000000.00, 444000000000.00]
                     getChart()
                     break;
                 case "英国":
-                    arrCounrtyData = [25.83340794, 26.42037326, 24.1084352, 25.37144103, 25.8601462, 25.11866914, 25.11299591, 24.83523514, 25.09121291, 25.47717113, 25.71953266]
-
+                    arrCounrtyData = [442000000000.00, 472000000000.00, 355000000000.00, 416000000000.00, 507000000000.00, 473000000000.00, 541000000000.00, 505000000000.00, 460000000000.00, 409000000000.00, 441000000000.00, 486000000000.00]
                     getChart()
                     break;
                 case "法国":
-                    arrCounrtyData = [22.26269213, 22.14848573, 20.83089327, 22.08943166, 21.95942516, 22.68250157, 23.36867422, 23.31789754, 23.36046782, 23.20483732, 23.80610031]
-
+                    arrCounrtyData = [560000000000.00, 616000000000.00, 485000000000.00, 524000000000.00, 596000000000.00, 569000000000.00, 581000000000.00, 581000000000.00, 506000000000.00, 501000000000.00, 535000000000.00, 582000000000.00]
                     getChart()
                     break;
                 case "美国":
-                    arrCounrtyData = [11.30719612, 10.31615636, 7.919615919, 8.595887591, 9.573699439, 9.79687152, 10.51960599, 10.95153383, 11.2046032, 10.98294396, 11.94741055]
-
+                    arrCounrtyData = [1150000000000.00, 1290000000000.00, 1060000000000.00, 1280000000000.00, 1480000000000.00, 1550000000000.00, 1580000000000.00, 1620000000000.00, 1500000000000.00, 1450000000000.00, 1550000000000.00, 1660000000000.00]
                     getChart()
                     break;
-
             }
         }
 
         function getChart() {
-            let yjsNums3 = arrCounrtyData.map(function(ele) {
-                let obj = {
-                    '2007': Number(ele['2007']).toFixed(3),
-                    '2008': Number(ele['2008']).toFixed(3),
-                    '2009': Number(ele['2009']).toFixed(3),
-                    '2010': Number(ele['2010']).toFixed(3),
-                    '2011': Number(ele['2011']).toFixed(3),
-                    '2012': Number(ele['2012']).toFixed(3),
-                    '2013': Number(ele['2013']).toFixed(3),
-                    '2014': Number(ele['2014']).toFixed(3),
-                    '2015': Number(ele['2015']).toFixed(3),
-                    '2016': Number(ele['2016']).toFixed(3),
-                    '2017': Number(ele['2017']).toFixed(3),
-                    '2018': Number(ele['2018']).toFixed(3),
-                }
-                return obj
-            })
-            console.log('yjsNums3')
-            console.log(yjsNums3)
-            let itemValue0 = yjsNums3;
-
-            for (var i in itemValue0) {
-                oneOfLine0.push(itemValue0[i]);
-                let objline = {};
-                objline.year = i;
-                objline.value = itemValue0[i];
-                lineTableData.push(objline);
-            }
-            console.log('第二次加载，将第一次加载数组中的元素清空')
-            console.log(arrCounrtyData)
-                // 为了显示不重叠，去掉小数点后位数
+            // 构造表格
+            var tabledata = []
             arrCounrtyData.forEach(element => {
-                oneOfLineToFixed0.push(Number(element).toFixed(0));
+                tabledata.push((Number(element) / 10000000000).toFixed(2));
+            });
+            var tableValue = document.getElementsByClassName('table-value')
+            console.log(tableValue)
+            for (var i = 0, len = tabledata.length; i < len; i++) {
+                tableValue[i].innerHTML = tabledata[i]
+            }
+
+            // 为了柱状图显示不重叠，去掉小数点后位数
+            arrCounrtyData.forEach(element => {
+                oneOfLineToFixed0.push((Number(element) / 10000000000).toFixed(0));
             });
             console.log('第二次加载，将第一次加载柱状图中的元素清空')
             console.log(oneOfLineToFixed0)
@@ -174,9 +207,10 @@
                 yAxis: {
                     show: true,
                     type: "value",
-                    name: "占比",
+                    // name: "公里",
+                    name: "美元",
                     axisLabel: {
-                        formatter: "{value}%"
+                        formatter: "{value}十亿"
                     },
                     axisLine: {
                         lineStyle: {
@@ -205,7 +239,7 @@
                             }
                         }
                     },
-                    barWidth: '20',
+                    barWidth: '15',
                     data: oneOfLineToFixed0,
                     color: "orange"
                         // leaves: {
