--- a/light-charts/index.html
+++ b/light-charts/index.html
@@ -14,7 +14,7 @@
     <div class="hello">
         <div class="chart-title">
             <div>
-                <h3><span id="charTitle" class="charTitle chart-title"></span><span class="chart-title">税收占国民生产总值GDP</span></h3>
+                <h3><span id="charTitle" class="charTitle chart-title"></span><span class="chart-title">外国直接投资净流入法国（BoP）</span></h3>
             </div>
         </div>
         <div class="box-data-chart">
@@ -23,13 +23,13 @@
         <div class="country-select">
             <ul class="select-opion" id="list">
                 <li id="china" class="select-option">中国</li>
-                <li id="els" class="select-option">日本</li>
+                <li id="els" class="select-option">俄罗斯</li>
                 <li id="eng" class="select-option">英国</li>
                 <li id="french" class="select-option">法国</li>
                 <li id="american" class="select-option">美国</li>
             </ul>
         </div>
-        <div class="table">
+        <!-- <div class="table">
             <div style="display:flex;flex-direction:row;justify-content:center">
                 <div class="data-part1" style>
                     <p>
@@ -86,7 +86,7 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- <script src='js/echarts.min.js'></script> -->
     <!-- <script src='js/jquery-3.2.1.min.js'></script> -->
@@ -123,27 +123,27 @@
         function switchData(key) {
             switch (key) {
                 case "中国":
-                    arrCounrtyData = [9.771406923, 10.10142693, 10.30944303, 10.21204751, 10.31279448, 9.907733077, 9.713067852, 9.416086828, 9.20099957]
+                    arrCounrtyData = [156249000000.00, 171535000000.00, 131057000000.00, 243703000000.00, 280072000000.00, 241214000000.00, 290928000000.00, 268097000000.00, 242489000000.00, 174750000000.00, 166084000000.00, 203492000000.00]
 
                     getChart()
                     break;
-                case "日本":
-                    arrCounrtyData = [10.10618629, 8.931591654, 8.36891038, 8.809784435, 9.356818207, 9.682412944, 10.36061765, 11.46920658, 11.42357202, 11.15496587, 11.64194651]
+                case "俄罗斯":
+                    arrCounrtyData = [55873680000.00, 74782910000.00, 36583100000.00, 43167780000.00, 55083630000.00, 50587560000.00, 69218890000.00, 22031340000.00, 6852970000.00, 32538900000.00, 28557440000.00, 8816180000.00]
 
                     getChart()
                     break;
                 case "英国":
-                    arrCounrtyData = [25.83340794, 26.42037326, 24.1084352, 25.37144103, 25.8601462, 25.11866914, 25.11299591, 24.83523514, 25.09121291, 25.47717113, 25.71953266]
+                    arrCounrtyData = [209515000000.00, 253454000000.00, 14547108445.00, 66734551294.00, 27012050072.00, 46750789728.00, 54473175400.00, 58890445253.00, 45333483122.00, 265811000000.00, 121249000000.00, 58646386419.00]
 
                     getChart()
                     break;
                 case "法国":
-                    arrCounrtyData = [22.26269213, 22.14848573, 20.83089327, 22.08943166, 21.95942516, 22.68250157, 23.36867422, 23.31789754, 23.36046782, 23.20483732, 23.80610031]
+                    arrCounrtyData = [83780962091.00, 67999194663.00, 18380195793.00, 38899924638.00, 44191741840.00, 32950453828.00, 31589259642.00, 5809580555.00, 42803255076.00, 45349681278.00, 47335618619.00, 66816525298.00]
 
                     getChart()
                     break;
                 case "美国":
-                    arrCounrtyData = [11.30719612, 10.31615636, 7.919615919, 8.595887591, 9.573699439, 9.79687152, 10.51960599, 10.95153383, 11.2046032, 10.98294396, 11.94741055]
+                    arrCounrtyData = [346613000000.00, 341092000000.00, 161083000000.00, 264039000000.00, 263497000000.00, 250345000000.00, 288131000000.00, 251856000000.00, 509087000000.00, 494457000000.00, 354828000000.00, 267081000000.00]
 
                     getChart()
                     break;
@@ -153,17 +153,17 @@
 
         function getChart() {
             // // 构造表格
-            var tabledata = []
-            arrCounrtyData.forEach(element => {
-                tabledata.push((Number(element)).toFixed(2));
-            });
-            var tableValue = document.getElementsByClassName('table-value')
-            for (var i = 0, len = tabledata.length; i < len; i++) {
-                tableValue[i].innerHTML = tabledata[i]
-            }
+            // var tabledata = []
+            // arrCounrtyData.forEach(element => {
+            //     tabledata.push((Number(element) / 1000000000).toFixed(2));
+            // });
+            // var tableValue = document.getElementsByClassName('table-value')
+            // for (var i = 0, len = tabledata.length; i < len; i++) {
+            //     tableValue[i].innerHTML = tabledata[i]
+            // }
             // 为了柱状图显示不重叠，去掉小数点后位数
             arrCounrtyData.forEach(element => {
-                oneOfLineToFixed0.push((Number(element)).toFixed(0));
+                oneOfLineToFixed0.push((Number(element) / 1000000000).toFixed(0));
             });
             var dataChart = echarts.init(document.getElementById("data-chart"));
             let option = {
@@ -209,10 +209,10 @@
                 yAxis: {
                     show: true,
                     type: "value",
-                    name: "占比",
+                    name: "美元",
                     // name: "人",
                     axisLabel: {
-                        formatter: "{value}%"
+                        formatter: "{value}亿"
                     },
                     axisLine: {
                         lineStyle: {
