--- a/light-charts/index.html
+++ b/light-charts/index.html
@@ -14,7 +14,7 @@
     <div class="hello">
         <div class="chart-title">
             <div>
-                <h3><span id="charTitle" class="charTitle chart-title"></span><span class="chart-title">外国直接投资净流入法国（BoP）</span></h3>
+                <h3><span id="charTitle" class="charTitle chart-title"></span><span class="chart-title">商品进口（现价美元）</span></h3>
             </div>
         </div>
         <div class="box-data-chart">
@@ -123,27 +123,27 @@
         function switchData(key) {
             switch (key) {
                 case "中国":
-                    arrCounrtyData = [156249000000.00, 171535000000.00, 131057000000.00, 243703000000.00, 280072000000.00, 241214000000.00, 290928000000.00, 268097000000.00, 242489000000.00, 174750000000.00, 166084000000.00, 203492000000.00]
+                    arrCounrtyData = [956116000000.00, 1132570000000.00, 1005920000000.00, 1396250000000.00, 1743480000000.00, 1818410000000.00, 1949990000000.00, 1959230000000.00, 1679570000000.00, 1587930000000.00, 1843790000000.00, 2135910000000.00]
 
                     getChart()
                     break;
                 case "俄罗斯":
-                    arrCounrtyData = [55873680000.00, 74782910000.00, 36583100000.00, 43167780000.00, 55083630000.00, 50587560000.00, 69218890000.00, 22031340000.00, 6852970000.00, 32538900000.00, 28557440000.00, 8816180000.00]
+                    arrCounrtyData = [223486000000.00, 291861000000.00, 191803000000.00, 248634000000.00, 323831000000.00, 335446000000.00, 341269000000.00, 307877000000.00, 193019000000.00, 191493000000.00, 238126000000.00, 249055000000.00]
 
                     getChart()
                     break;
                 case "英国":
-                    arrCounrtyData = [209515000000.00, 253454000000.00, 14547108445.00, 66734551294.00, 27012050072.00, 46750789728.00, 54473175400.00, 58890445253.00, 45333483122.00, 265811000000.00, 121249000000.00, 58646386419.00]
+                    arrCounrtyData = [638263000000.00, 657783000000.00, 519078000000.00, 591095000000.00, 676896000000.00, 695220000000.00, 660034000000.00, 689836000000.00, 626223000000.00, 636639000000.00, 643515000000.00, 673549000000.00]
 
                     getChart()
                     break;
                 case "法国":
-                    arrCounrtyData = [83780962091.00, 67999194663.00, 18380195793.00, 38899924638.00, 44191741840.00, 32950453828.00, 31589259642.00, 5809580555.00, 42803255076.00, 45349681278.00, 47335618619.00, 66816525298.00]
+                    arrCounrtyData = [630861000000.00, 716795000000.00, 560873000000.00, 611070000000.00, 720028000000.00, 674415000000.00, 681467000000.00, 678781000000.00, 570758000000.00, 567657000000.00, 618649000000.00, 672593000000.00]
 
                     getChart()
                     break;
                 case "美国":
-                    arrCounrtyData = [346613000000.00, 341092000000.00, 161083000000.00, 264039000000.00, 263497000000.00, 250345000000.00, 288131000000.00, 251856000000.00, 509087000000.00, 494457000000.00, 354828000000.00, 267081000000.00]
+                    arrCounrtyData = [2020400000000.00, 2169490000000.00, 1605300000000.00, 1969180000000.00, 2266020000000.00, 2336520000000.00, 2329060000000.00, 2412550000000.00, 2315300000000.00, 2250150000000.00, 2408480000000.00, 2614330000000.00]
 
                     getChart()
                     break;
@@ -155,7 +155,7 @@
             // // 构造表格
             // var tabledata = []
             // arrCounrtyData.forEach(element => {
-            //     tabledata.push((Number(element) / 1000000000).toFixed(2));
+            //     tabledata.push((Number(element) / 10000000000).toFixed(2));
             // });
             // var tableValue = document.getElementsByClassName('table-value')
             // for (var i = 0, len = tabledata.length; i < len; i++) {
@@ -163,7 +163,7 @@
             // }
             // 为了柱状图显示不重叠，去掉小数点后位数
             arrCounrtyData.forEach(element => {
-                oneOfLineToFixed0.push((Number(element) / 1000000000).toFixed(0));
+                oneOfLineToFixed0.push((Number(element) / 10000000000).toFixed(0));
             });
             var dataChart = echarts.init(document.getElementById("data-chart"));
             let option = {
@@ -212,7 +212,7 @@
                     name: "美元",
                     // name: "人",
                     axisLabel: {
-                        formatter: "{value}亿"
+                        formatter: "{value}百亿"
                     },
                     axisLine: {
                         lineStyle: {
@@ -267,4 +267,4 @@
     </script>
 </body>
 
-</html>
+</html>L
